remake russian language

--- a/src/main/resources/assets/presencefootsteps/lang/ru_ru.json
+++ b/src/main/resources/assets/presencefootsteps/lang/ru_ru.json
@@ -1,60 +1,62 @@
 {
 	"key.presencefootsteps.settings": "Presence Footsteps",
-	"menu.pf.title": "Presence Footsteps Options",
-	"menu.pf.multiplayer.true": "Игроки: Все",
-	"menu.pf.multiplayer.false": "Игроки: Только я",
+	"menu.pf.title": "Настройки Presence Footsteps",
+	"menu.pf.multiplayer.true": "В сетевой игре: Вкл",
+	"menu.pf.multiplayer.false": "В сетевой игре: Выкл",
 	"menu.pf.global.all": "Сущности: Все",
+	"menu.pf.global.players_and_hostiles": "Сущности: Игроки и монстры",
 	"menu.pf.global.players_only": "Сущности: Только игроки",
-	"menu.pf.global.players_and_hostiles": "Сущности: Игроки + Враги",
-	"menu.pf.volume.min": "Громкость: ВЫКЛ",
-	"menu.pf.volume": "Громкость: %d%%",
-	"menu.pf.volume.tooltip": "Громкость звуков Presence Footsteps. Поставьте 0, если хотите выключить мод.",
-	"menu.pf.volume.player": "Громкость Клиента: %d%%",
-	"menu.pf.volume.player.tooltip": "Измените громкость ваших шагов.",
-	"menu.pf.volume.other_players": "Громкость Игроков: %d%%",
-	"menu.pf.volume.other_players.tooltip": "Изменяет громкость чужих шагов в сетевой игре.",
+	"menu.pf.volume.min": "Общая громкость: Выкл",
+	"menu.pf.volume": "Общая громкость: %d%%",
+	"menu.pf.volume.tooltip": "Общая громкость всех звуков Presence Footsteps. Если хотите выключить мод, установите на 0.",
+	"menu.pf.volume.player": "Шаги клиента: %d%%",
+	"menu.pf.volume.player.tooltip": "Громкость ваших шагов. Применяется только к вашей копии игры.",
+	"menu.pf.volume.other_players": "Шаги игроков: %d%%",
+	"menu.pf.volume.other_players.tooltip": "Громкость шагов других игроков в сетевой игре.",
 	"menu.pf.volume.running": "Усиление при беге: %d%%",
-	"menu.pf.volume.running.tooltip": "Как сильно громкость шагов будет изменяться при беге.\n\nЭто значение ДОБАВЛЯЕТСЯ к значению вашей скорости, так что чем быстрее вы бежите, тем громче будут ваши шаги.\n\n Рекомендуется сначала установить меньшее значение и после прибавлять по надобности. Большие значения сделают эффект сильнее.",
-	"menu.pf.stance": "Стойка: %s",
-	"menu.pf.stance.auto": "Авто",
+	"menu.pf.volume.running.tooltip": "Насколько сильно громкость шагов может и при беге.\n\nЭто значение ДОБАВЛЯЕТСЯ к громкости шагов и будет изменяться со скоростью.\n\nРекомендуется сначала поставить мелкое значение, а потом его слегка менять при надобности. Большие значения усилят эффект.",
+	"menu.pf.volume.wet": "Мокрые поверхности: %s",
+	"menu.pf.volume.wet.tooltip": "Громкость шагов при ходьбе по мокрым блокам.",
+	"menu.pf.stance": "Режим: %s",
+	"menu.pf.stance.auto": "Автоматический",
 	"menu.pf.stance.none": "Никакой",
-	"menu.pf.stance.none.tooltip": "Автоматический режим выберет самую удачную стойку основываясь на показаниях мода Mine Little Pony. Если мод отсутствует, режим идентичен Двуногому.",
+	"menu.pf.stance.none.tooltip": "Автоматическая стойка выберет подходящий звук основываясь на показаниях мода Mine Little Pony. Если этого мода нет, автоматическая стойка равна двуногой",
 	"menu.pf.stance.quadruped": "Четвероногий",
-	"menu.pf.stance.quadruped.tooltip": "Эмуляция звуков ходьбы с 4 ногами",
+	"menu.pf.stance.quadruped.tooltip": "Четвероногий режим эмулирует звуки от четырёх ног",
 	"menu.pf.stance.biped": "Двуногий",
-	"menu.pf.stance.biped.tooltip": "Эмуляция звуков ходьбы с 2 ногами",
+	"menu.pf.stance.biped.tooltip": "Двуногий режим эмулирует звуки от двух ног (как у людей)",
 	"menu.pf.stance.flying": "Пегас",
-	"menu.pf.stance.flying.tooltip": "Эмуляция звуков ходьбы с 4 ногами и крыльями",
+	"menu.pf.stance.flying.tooltip": "Режим пегаса эмулирует звуки от четырёх ног с крыльями",
 	"menu.pf.stance.flying_biped": "Птица",
-	"menu.pf.stance.flying_biped.tooltip": "Эмуляция звуков ходьбы с 2 ногами и крыльями",
+	"menu.pf.stance.flying_biped.tooltip": "Режим птицы эмулирует звуки от двух ног с крыльями",
 	"menu.pf.report.full": "Полный отчёт",
-	"menu.pf.report.concise": "Краткий отчет",
-	"pf.report.save": "Файл сохранен как: %s",
-	"pf.report.error": "Не удалось создать отчет: %s",
-	"pf.update.title": "Обновление Доступно",
+	"menu.pf.report.concise": "Краткий отчёт",
+	"pf.report.save": "Отчёт сохранён как: %s",
+	"pf.report.error": "Не удалось создать отчёт: %s",
+	"pf.update.title": "Доступно обновление",
 	"pf.update.text": "Presence Footsteps %s",
 	"pf.update.checking": "Проверка обновлений...",
 	"pf.update.updates_available": "Доступно обновление!\n Presence Footsteps %s для Minecraft %s",
-	"pf.update.up_to_date": "У вас новейшая версия",
+	"pf.update.up_to_date": "У вас последняя версия",
 	"subtitles.pf.footsteps": "Шаги",
 	"subtitles.pf.wood_squeak": "Дерево скрипит",
 	"subtitles.pf.wood_bends": "Дерево гнётся",
 	"subtitles.pf.wood_creaks": "Дерево гремит",
 	"subtitles.pf.swim": "Вода течёт",
 	"subtitles.pf.wings_flap": "Крылья хлопают",
-	"subtitles.pf.leaves_rustle": "Листья шелестят",
-	"subtitles.pf.grass_rustles": "Трава шелестит",
-	"subtitles.pf.land": "Крылья складываются",
+	"subtitles.pf.leaves_rustle": "Листья шуршат",
+	"subtitles.pf.grass_rustles": "Трава шуршит",
+	"subtitles.pf.land": "Крылья схлопываются",
 	"subtitles.pf.metal_clink": "Метал звенит",
 	"subtitles.pf.snow_crunch": "Снег хрустит",
 	"subtitles.pf.sand_crunch": "Песок хрустит",
 	"subtitles.pf.grass_crunch": "Трава хрустит",
 	"subtitles.pf.gravel.crunch": "Гравий хрустит",
-	"subtitles.pf.ice_crack": "Лёд трещит",
+	"subtitles.pf.ice_crack": "Лёд трескается",
 	"subtitles.pf.mud_squealk": "Грязь хлюпает",
-	"subtitles.pf.glass_rattles": "Стекло гремит",
+	"subtitles.pf.glass_rattles": "Стекло дрожит",
 	"subtitles.pf.glass_croak": "Стекло скрипит",
-	"subtitles.pf.chain": "Цепи звенят",
+	"subtitles.pf.chain": "Цепь звенит",
 	"subtitles.pf.stone_crack": "Камень трескается",
 	"subtitles.pf.wax_squeak": "Воск скрипит"
 }
