--- a/src/main/resources/assets/presencefootsteps/lang/ru_ru.json
+++ b/src/main/resources/assets/presencefootsteps/lang/ru_ru.json
@@ -14,13 +14,13 @@
 	"menu.pf.volume.other_players": "Шаги игроков: %d%%",
 	"menu.pf.volume.other_players.tooltip": "Громкость шагов других игроков в сетевой игре.",
 	"menu.pf.volume.running": "Усиление при беге: %d%%",
-	"menu.pf.volume.running.tooltip": "Насколько сильно громкость шагов может и при беге.\n\nЭто значение ДОБАВЛЯЕТСЯ к громкости шагов и будет изменяться со скоростью.\n\nРекомендуется сначала поставить мелкое значение, а потом его слегка менять при надобности. Большие значения усилят эффект.",
+	"menu.pf.volume.running.tooltip": "Насколько сильно громкость шагов может измениться при беге.\n\nЭто значение ДОБАВЛЯЕТСЯ к громкости шагов и будет изменяться со скоростью.\n\nРекомендуется сначала поставить мелкое значение, а потом его слегка менять при надобности. Большие значения усилят эффект.",
 	"menu.pf.volume.wet": "Мокрые поверхности: %s",
 	"menu.pf.volume.wet.tooltip": "Громкость шагов при ходьбе по мокрым блокам.",
 	"menu.pf.stance": "Режим: %s",
 	"menu.pf.stance.auto": "Автоматический",
 	"menu.pf.stance.none": "Никакой",
-	"menu.pf.stance.none.tooltip": "Автоматическая стойка выберет подходящий звук основываясь на показаниях мода Mine Little Pony. Если этого мода нет, автоматическая стойка равна двуногой",
+	"menu.pf.stance.none.tooltip": "Автоматический режим подберёт наиболее подходящий режим основываясь на показаниях мода Mine Little Pony. Если этого мода нет, автоматический режим идентичен двуногому",
 	"menu.pf.stance.quadruped": "Четвероногий",
 	"menu.pf.stance.quadruped.tooltip": "Четвероногий режим эмулирует звуки от четырёх ног",
 	"menu.pf.stance.biped": "Двуногий",
