--- a/src/main/resources/assets/presencefootsteps/lang/zh_cn.json
+++ b/src/main/resources/assets/presencefootsteps/lang/zh_cn.json
@@ -15,6 +15,8 @@
 	"menu.pf.volume.other_players.tooltip": "在多人游戏中改变其他玩家脚步声的音量。",
 	"menu.pf.volume.running": "跑步增加音量：%d%%",
 	"menu.pf.volume.running.tooltip": "跑步时脚步声增加多少。\n\n这个数值是被添加到总音量中的，会随着你的速度而增大。所以你走得越快，脚步声就会越大。\n\n建议先将其设置为较小的值，然后根据需要进行调整。较高的数值将使效果更加明显。",
+	"menu.pf.volume.wet": "潮湿的表面：%s",
+	"menu.pf.volume.wet.tooltip": "变更在潮湿方块上行走時产生的音量。",
 	"menu.pf.stance": "站姿：%s",
 	"menu.pf.stance.auto": "自动",
 	"menu.pf.stance.none": "无",
@@ -23,8 +25,8 @@
 	"menu.pf.stance.quadruped.tooltip": "四足动物：模拟四条腿的走路方式",
 	"menu.pf.stance.biped": "双足动物",
 	"menu.pf.stance.biped.tooltip": "双足动物：模拟两条腿(人类)的走路方式",
-	"menu.pf.stance.flying": "飞马",
-	"menu.pf.stance.flying.tooltip": "飞马：模拟四条腿带翅膀的走路方式",
+	"menu.pf.stance.flying": "天马",
+	"menu.pf.stance.flying.tooltip": "天马：模拟四条腿带翅膀的走路方式",
 	"menu.pf.stance.flying_biped": "鸟类",
 	"menu.pf.stance.flying_biped.tooltip": "鸟类：模拟两条腿带翅膀的走路方式",
 	"menu.pf.report.full": "完整报告",
