Update zh_tw.json (#249)
Add "pf.default_sounds.name" string

---------

Co-authored-by: Sollace <sollacea@gmail.com>
Co-authored-by: ­Sollace <Sollace@users.noreply.github.com>

--- a/src/main/resources/assets/presencefootsteps/lang/zh_tw.json
+++ b/src/main/resources/assets/presencefootsteps/lang/zh_tw.json
@@ -1,5 +1,6 @@
 {
 	"key.presencefootsteps.settings": "臨場腳步聲",
+	"pf.default_sounds.name": "預設聲音包",
 	"menu.pf.title": "臨場腳步聲選項",
 	"menu.pf.multiplayer.true": "單人 + 多人遊戲",
 	"menu.pf.multiplayer.false": "單人遊戲",
