Add separate volume settings for passive and hostile entities

--- a/src/main/resources/assets/presencefootsteps/lang/en_us.json
+++ b/src/main/resources/assets/presencefootsteps/lang/en_us.json
@@ -10,6 +10,10 @@
 	"menu.pf.volume.min": "Global Volume: OFF",
 	"menu.pf.volume": "Global Volume: %d%%",
 	"menu.pf.volume.tooltip": "The global volume of all presence footsteps sounds. Set to 0 if you wish to disable the mod entirely.",
+	"menu.pf.volume.hostile_entities": "Hostile Entities: %d%%",
+	"menu.pf.volume.hostile_entities.tooltip": "Changes the volume of enemies' footsteps.",
+	"menu.pf.volume.passive_entities": "Passive Entities: %d%%",
+	"menu.pf.volume.passive_entities.tooltip": "Changes the volume of animal' footsteps.",
 	"menu.pf.volume.player": "Client Player: %d%%",
 	"menu.pf.volume.player.tooltip": "Changes the volume of your own footsteps.",
 	"menu.pf.volume.other_players": "Other Players: %d%%",
