--- a/src/main/resources/assets/presencefootsteps/lang/en_us.json
+++ b/src/main/resources/assets/presencefootsteps/lang/en_us.json
@@ -1,6 +1,7 @@
 {
 	"key.presencefootsteps.settings": "Presence Footsteps",
 	"pf.default_sounds.name": "Default Sound Pack",
+	"pf.default_sounds.missing": "No sound packs detected. Go to resource packs and enable the %s to get started.",
 	"menu.pf.title": "Presence Footsteps Options",
 	"menu.pf.multiplayer.true": "Single + Multiplayer",
 	"menu.pf.multiplayer.false": "Singleplayer Only",
